# iot-hub-device-update-git

./: .clang-format  CMakeLists.txt
cmake/: agentRules.cmake
docs/publish-api-reference/: import-update.md
licenses/: cgmanifest.json
src/: CMakeLists.txt
src/adu-shell/: CMakeLists.txt
src/adu-shell/inc/: adushell_const.hpp
src/adu-shell/src/: main.cpp
src/agent/adu_core_interface/src/: adu_core_export_helpers.c  adu_core_interface.c  adu_core_json.c  agent_workflow.c  startup_msg_helper.c  startup_msg_helper.h
src/agent/pnp_helper/: readme.md
src/agent/src/: health_management.c  main.c
src/communication_abstraction/inc/aduc/: client_handle.h  client_handle_helper.h
src/communication_abstraction/src/: client_handle_helper.c
src/content_handlers/: CMakeLists.txt
src/content_handlers/apt_handler/tests/: apt_parser_ut.cpp
src/content_handlers/fsupdate_handler/: CMakeLists.txt
src/content_handlers/fsupdate_handler/inc/aduc/: fsupdate_handler.hpp
src/content_handlers/fsupdate_handler/src/: fsupdate_handler.cpp
src/content_handlers/inc/aduc/: content_handler.hpp  content_handler_factory.hpp  handler_function_map.hpp
src/content_handlers/src/: content_handler_factory.cpp
src/content_handlers/swupdate_handler/src/: swupdate_handler.cpp
src/inc/aduc/: adu_core_exports.h
src/platform_layers/linux_platform_layer/: CMakeLists.txt
src/platform_layers/linux_platform_layer/src/: linux_adu_core_exports.cpp  linux_adu_core_impl.cpp  linux_adu_core_impl.hpp
tools/AduCmdlets/: coppyAndCreate.sh  create-adu-import-manifest.sh
(+16 files in other folders)
